--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -49,8 +49,7 @@ jobs:
           df -h
       - name: 同步最新的源码
         run: |
-          git remote add openwrt https://github.com/coolsnowwolf/lede.git
-          git pull openwrt master
+          git pull upstream master
           git remote -v
       - name: Update feeds
         run: |
