--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -61,11 +61,13 @@ jobs:
           # 在 cat >> .config <<EOF 到 EOF 之间粘贴你的编译配置, 需注意缩进关系
           # 例如:
           cat >> .config <<EOF
+
           CONFIG_TARGET_ROOTFS_TARGZ=y
 
-          CONFIG_PACKAGE_luci-theme-argon=y
-          CONFIG_PACKAGE_luci-theme-bootstrap=y
-          CONFIG_PACKAGE_luci-theme-netgear=y
+          CONFIG_TARGET_PREINIT_IP="192.168.6.2"
+          CONFIG_TARGET_PREINIT_NETMASK="255.255.255.0"
+          CONFIG_TARGET_PREINIT_BROADCAST="192.168.6.255"
+          ONFIG_TARGET_PREINIT_DNS="192.168.6.1"
 
           EOF
           #
