--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -59,11 +59,11 @@ jobs:
           cat my.config >> .config
           sed -i 's/^[ \t]*//g' ./.config
           make defconfig
+          
       - name: Make download
         run: |
-          make download -j8 || make download -j1 V=s
-          rm -rf $(find ./dl/ -size -1024c)
-          df -h
+          make download -j8
+          find dl -size -1024c -exec rm -f {} \;
       - name: Compile firmware
         run: |
           make -j$(nproc) || make -j1 V=s
@@ -72,8 +72,9 @@ jobs:
           echo "======================="
           df -h
           echo "======================="
-          du -h ./ --max-depth=1
-          du -h /mnt/openwrt/ --max-depth=1 || true
+          du -h --max-depth=1 ./ --exclude=build_dir --exclude=bin
+          du -h --max-depth=1 ./build_dir
+          du -h --max-depth=1 ./bin
       - name: Prepare artifact
         run: |
           mkdir -p ./artifact/firmware
@@ -100,6 +101,7 @@ jobs:
         with:
           name: OpenWrt_firmware
           path: ./bin/targets/
+  
 
       - name: Upload release asset
         if: github.event == 'release'
